# architect-rs

./: .gitignore  Cargo.toml  README.md
crates/architect_derive/: Cargo.toml
crates/architect_derive/src/: lib.rs
crates/architect_internal/: Cargo.toml
crates/architect_internal/src/: lib.rs
crates/architect_macro/: Cargo.toml
crates/architect_macro/src/: lib.rs
examples/: shift_register.rs
src/: lib.rs
testbenches/shift_register/: Makefile  test.py
