[package]
name = "architect"
version = "0.1.0"
description = "A library for hardware description."
authors = ["vzwGrey <vzwgrey@gmail.com>"]
repository = "https://github.com/vzwGrey/architect-rs"
edition = "2021"
publish = false

[workspace]
members = [
  "crates/architect_internal",
  "crates/architect_derive",
]


[dependencies]
architect_internal = { path = "crates/architect_internal" }
architect_derive = { path = "crates/architect_derive" }
